[package]
name = "learn-claude-code-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
